@@ -1,3 +1,10 @@
+2012-12-12  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * Source/GSMime.m: Fix parsing of final boundary in a multipart
+        document so that the trailing '--' ends the boundary and no CRLF
+        is required. The grammar in RFC1341 says that the final boundary
+        does not need a CRLF terminator.
+
 2012-12-08  Richard Frith-Macdonald <rfm@gnu.org>
 
         * Source/GSTLS.m:
